# euclidean-rhythms-module

./: Cargo.toml  Embed.toml  NOTES.md  README.md  build.rs  direction.py  euclidean-rhythms-schematic.asc  main.py  pattern.py  pyproject.toml  user_choice.py  utils.py
.cargo/: config.toml
src/: euclidean.rs  main.rs
