[package]
name = "first-project"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.9.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",

] }
embassy-rp = { version = "0.9.0", features = [
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",

] }
embassy-time = { version = "0.5.0", features = [] }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
# critical-section = "1.1"

panic-halt = "1.0.0"
embassy-futures = "0.1.2"
embassy-sync = "0.8.0"
